src/objects/Expenditure__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_expense__c</fullName>
        <description>Date on which expense done</description>
        <label>Date of expense</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Each_Contribution__c</fullName>
        <formula>Total_Expense__c  / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Each Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expenditure_Purpose__c</fullName>
        <description>Reason behind expenditure</description>
        <label>Expenditure Purpose</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Paid_By__c</fullName>
        <label>Paid By</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anupam</fullName>
                    <default>true</default>
                    <label>Anupam</label>
                </value>
                <value>
                    <fullName>Biman</fullName>
                </value>
                <value>
                    <fullName>Midhun</fullName>
                </value>
                <value>
                    <fullName>Rahul</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Expense__c</fullName>
        <label>Total Expense</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Expenditure</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Expenditure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenditures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>